--- a/Goals.html
+++ b/Goals.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head></head>
-<title>MOe</title>
-<h1>Who is MOe</h1>
+<title>Goals</title>
+<h1>Accomplishments</h1>
 <body></body>
 
 
