--- a/Moetainment/About.html
+++ b/Moetainment/About.html
@@ -1,28 +1,48 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Goals</title> <meta charset="utf-8">
+	<title>About</title> <meta charset="utf-8">
   <title>MOe</title><link rel="stylesheet" type="text/css" href="style.css">
+
   <style type="text/css">
 
-	h1{font-family:Georgia, serif ;font-weight:300px}
-	h1{text-shadow: 2px 4px 8px #C25975;}
+	h1{font-family:Georgia,serif;
+    font-weight:300px;
+    text-shadow: 4px 6px 8px #e8e3e7;
+    display: block;
+    font-size: 2em;
+    margin-top: 0.67em;
+    margin-bottom: 0.67em;
+    margin-left: 0;
+    margin-right: 0;
+    font-weight: bold;}
+
   h2{font-family: "Arial Black", Gadget, sans-serif;}
+
   h3{font-family:"Times New Roman", Times, serif }
+
+
+  
 	div.container {width: 100%; border: 2px solid gray;}
+
 
   header, footer {
     padding: 1em;
     color: white;
     background-color:#f599af;
+  background-position: center;
     clear: left;
     text-align: center;
    }
-body{
-    background-image: url("img_tree.gif"), url("img_flwr.gif");
-    background-color: #cccccc;
-} {
-	background-clip: 
+body  
+{
+   
+
+	background: url("http://i.giphy.com/qWrJAJDwI8xQA.gif");
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: 1500px 350px;
+  background-position: center; 
 }
 {
     margin: 0; 
@@ -62,8 +82,8 @@ article
   </style>
 </head>
 		<center><h1>Who is MOe</h1></center>
-<body></body>
+<body style= "background:">
 
 
-
+</body>
 </html>
