--- a/Moetainment/Assets.html
+++ b/Moetainment/Assets.html
@@ -1,15 +1,78 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Assets</title>
-		<link rel="stylesheet" href="http://liborzezulka.com/css/font.css" />
-		<link rel="stylesheet" href="http://liborzezulka.com/css/content.css" />
-		<link rel="stylesheet" href="http://liborzezulka.com/css/layout.css" />
-		<link rel="stylesheet" href="http://liborzezulka.com/css/print.css" />
+	<title>Assets</title> <meta charset="utf-8">
+  <title>MOe</title><link rel="stylesheet" type="text/css" href="style.css">
+  <style type="text/css">
+
+  <h2>background-clip: border-box;</h2>
+<div id="border-box">
+  <p>MOe.</p>
+</div>
+
+
+<h2>background-clip: padding-box;</h2>
+<div id="padding-box">
+  <p>This paragraph is the content.</p>
+
+	h1{font-family:Georgia, serif ;font-weight:300px}
+	h1{text-shadow: 2px 4px 8px #C25975;}
+  h2{font-family: "Arial Black", Gadget, sans-serif;}
+  h3{font-family:"Times New Roman", Times, serif }
+	div.container {width: 100%; border: 2px solid gray;}
+
+  header, footer {
+    padding: 1em;
+    color: white;
+    background-color:#f599af;
+    clear: left;
+    text-align: center;
+   }
+body {
+    margin: 0; 
+    padding: 0; 
+    font-family:'Arial, serif'; 
+  }
+  nav {
+    background-color: #595959; 
+    color: #DAA520;
+    list-style-image: url( "https://i.makeagif.com/media/3-01-2016/pKB5Jk.gif");
+    float: left;
+    max-width: 160px;
+    margin: 0;
+    padding: 1em;
+  }
+
+  nav ul 
+  {
+    list-style-type: none;
+    padding: 0;
+  }
+   
+nav ul a 
+  {
+    text-decoration: underline;
+  }
+
+article 
+    {margin-left: 170px;background.gif
+    border-left: 1px solid gray;
+    padding: 1em;
+    overflow: hidden;
+    }
+  .assets
+  {margin: 50px; font-family: Georgia,serif;}
+
+  </style>
+
 </head>
-		<center><h1>Who is MOe</h1></center>
-<body></body>
+		<center><h1> Who is MOe</h1></center>
+
+<body 
+background:url( "http://gph.is/2cjec6o") repeat-y 100% 100% fixed;
+    height:100%;
+    width:100%; >
 
 
-
+</body>
 </html>
