--- a/Moetainment/MOe.html
+++ b/Moetainment/MOe.html
@@ -1,49 +1,72 @@
 <!DOCTYPE html>
 <html>
-<head></head>
-	<title>MOe</title>
-		<h1>Who is MOe</h1>
-        <meta charset="utf-8" />
-    	<meta name="author" content="Mouminatou"/>
-		<meta name="description" content="" />
-		<title>Successful Entrepreneur</title>
-		
-		<style>figure{margin:0}.tmblr-iframe{position:absolute}.tmblr-iframe.hide{display:none}</style><link rel="stylesheet" href="http://liborzezulka.com/css/normalize.css" />
-		<link rel="stylesheet" href="http://liborzezulka.com/css/font.css" />
-		<link rel="stylesheet" href="http://liborzezulka.com/css/content.css" />
-		<link rel="stylesheet" href="http://liborzezulka.com/css/layout.css" />
-		<link rel="stylesheet" href="http://liborzezulka.com/css/print.css" />
-		<script>document.documentElement.className += ' js';</script>
-                    
-				
+<head> 
+  <meta charset="utf-8">
+  <title>MOe</title><link rel="stylesheet" type="text/css" href="style.css">
+  <style type="text/css">
+	h1{font-family:Georgia, serif ;font-weight:300px}
+	h1{text-shadow: 2px 4px 8px #C25975;}
+  h2{font-family: "Arial Black", Gadget, sans-serif;}
+  h3{font-family:"Times New Roman", Times, serif }
+	div.container {width: 100%; border: 2px solid gray;}
+
+  header, footer {
+    padding: 1em;
+    color: white;
+    background-color:#f599af;
+    clear: left;
+    text-align: center;
+   }
+body {
+    margin: 0; 
+    padding: 0; 
+    font-family:'Arial, serif'; 
+  }
+  nav {
+    background-color: #595959; 
+    color: #DAA520;
+    list-style-image: 
+    float: left;
+    max-width: 160px;
+    margin: 0;
+    padding: 1em;
+  }
+
+  nav ul 
+  {
+    list-style-type: none;
+    padding: 0;
+  }
+   
+nav ul a 
+  {
+    text-decoration: underline;
+  }
+
+article 
+    {margin-left: 170px;
+    border-left: 1px solid gray;
+    padding: 1em;
+    overflow: hidden;
+    }
+  .assets
+  {margin: 50px; font-family: Georgia,serif;}
+
+  </style>
+	<title>Assets</title>
+</head>
+<style type="text/css"></style>
+<ol>
+		<center>
+		<h2>Who is MOe</h2></center>
+<center>
+		<h3>Basketball</h3></center>
+<center>
+		<h3>Chess</h3></center>
+
+			</ol>
+<body></body>
 
 
-<body>
-	  <div class="w3-container w3-dark-grey w3-center w3-text-light-grey w3-padding-32" id="about">
-    <h4><b>About Me</b></h4>
-    <img src="/w3images/avatar_hat.jpg" alt="Me" class="w3-image w3-padding-32" width="600" height="650">
-    <div class="w3-content w3-justify" style="max-width:600px">
-      <h4>My Name</h4>
-      <p>I am from Harlem Juu Hearddd
-      </p>
-      <p>moetainment13.com</p>
-      <p>tel: 5353 35531</p>
-      <hr class="w3-opacity">
-	<button class="Bio">Bio</button>
-	<div class="panel">
-  	<p>Lorem ipsum...</p>
-	</div>
 
-<button class="accordion">Basketball</button>
-<div class="panel">
-  <p>Lorem ipsum...</p>
-</div>
-
-<button class="accordion">Section 3</button>
-<div class="panel">
-  <p>Lorem ipsum...</p>
-</div>
-      <p>I am a young entrepreneur from Harlem, New York.</p>
-
-</body>
 </html>
