--- a/Moetainment/Contacts.html
+++ b/Moetainment/Contacts.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Goals</title> <meta charset="utf-8">
+<title>Contact</title> <meta charset="utf-8">
   <title>MOe</title><link rel="stylesheet" type="text/css" href="style.css">
   <style type="text/css">
-
 	h1{font-family:Georgia, serif ;font-weight:300px}
 	h1{text-shadow: 2px 4px 8px #C25975;}
   h2{font-family: "Arial Black", Gadget, sans-serif;}
@@ -18,13 +17,7 @@
     clear: left;
     text-align: center;
    }
-body{
-    background-image: url("img_tree.gif"), url("img_flwr.gif");
-    background-color: #cccccc;
-} {
-	background-clip: 
-}
-{
+body {
     margin: 0; 
     padding: 0; 
     font-family:'Arial, serif'; 
@@ -61,9 +54,30 @@ article
 
   </style>
 </head>
-		<center><h1>Who is MOe</h1></center>
-<body></body>
+</head>
 
-
-
+<body>
+  <h1>Wassup ?</h1>
+<p>How you feeling today</p><h1>Anna Dowlin</h1>
+<p>Hi! I'm Mouminatou Barry, a entrepreneur from Harlem,New York.</p>
+<input type="email" placeholder="Your email">
+<input type="submit">
+</body>
 </html>
+
+  <div class="w3-padding w3-xlarge w3-text-orange">
+    <i class="fa fa-home"></i>
+    <i class="fa fa-search"></i>
+    <i class="fa fa-cloud"></i>
+    <i class="fa fa-trash"></i>
+    Welcome!
+  </div>
+
+  <ul class="w3-ul">
+    <li><i class="fa fa-home"></i> Home</li>
+    <li class="w3-large"><i class="fa fa-home"></i> Home</li>
+    <li class="w3-xlarge"><i class="fa fa-home"></i> Home</li>
+    <li class="w3-xxlarge"><i class="fa fa-home"></i> Home</li>
+    <li class="w3-xxxlarge"><i class="fa fa-home"></i> Home</li>
+    <li class="w3-jumbo w3-teal"><i class="fa fa-home"></i> Home</li>
+  </ul>
