--- a/Moetainment/MOetainment.html
+++ b/Moetainment/MOetainment.html
@@ -1,25 +1,38 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head> 
-  <title>MOe</title>
-	<style type="text/css">
-	h1{font-family:Georgia, serif ;font-weight:300px}
+  <meta charset="utf-8"; name="viewport"; content="width=device-width, initial-scale=1;">
+              <link rel="stylesheet" href="/lib/w3.css">
+              <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+              <link rel="stylesheet" type="text/css" href="style.css">
+                          <title>MOe</title>
+      <style type="text/css">
+	h1{color: #f4c835; ,font-family:Georgia, serif ;font-weight:300px}
 	h1{text-shadow: 2px 4px 8px #C25975;}
   h2{font-family: "Arial Black", Gadget, sans-serif;}
   h3{font-family:"Times New Roman", Times, serif }
 	div.container {width: 100%; border: 2px solid gray;}
 
-  header, footer
- {
-    padding: 1em;
+  header 
+  {background: url("https://i.makeagif.com/media/3-01-2016/pKB5Jk.gif"); 
+}
+   footer { 
+     background: url("https://i.makeagif.com/media/3-01-2016/pKB5Jk.gif"); 
+     padding: 1em;
     color: white;
     background-color:#f599af;
     clear: left;
     text-align: center;
+   
    }
-
-  nav 
-  {
+body {
+    margin: 0; 
+    padding: 0; 
+    font-family:'Arial, serif'; 
+  }
+  nav {
+    color: #DAA520;
+    list-style-image: url( "https://i.makeagif.com/media/3-01-2016/pKB5Jk.gif");
     float: left;
     max-width: 160px;
     margin: 0;
@@ -45,27 +58,44 @@ article
     }
   .assets
   {margin: 50px; font-family: Georgia,serif;}
+
   </style>
 </head>
 
-<body style="background-color:#FCDFE6" >
+<body style="background-color:"; >
+  
+<div class="w3-container">
+ 
+  <p><button class="w3-btn w3-orange w3-xlarge">Button<i class="w3-margin-left fa fa-home"></i></button></p>
 
-    <div class="container" >
+  <p><i class="w3-jumbo w3-spin fa fa-home"></i></p>
+</div>
+
+
+ 
+ <ul class= "nav">
+    <div class="assets" >
   <header>
    <h1>Imagination is the beginning of Creativity</h1>
   </header>
   
-  <nav>
+ 
+  <ul class="nav">
+    <li><a href="Moe.html">MOe</a></li>
+    <li><a href="Assets.html">MOe</a></li>
+    <li><a href="Goals.html">MOe</a></li>
+    <li><a href="Gallery.html">MOe</a></li>
+  </ul>
+   <nav>
    <center><table>
 	   <tr colspan="50">
-	   <th class="assets"><a href="#MOe.html">MOe</a></th>
-	   <th class="assets"><a href="#Assets.html">Assets</a></th>
-	   <th class="assets"><a href="#Goals.html">Goals</a></th>
-  	 <th class="assets"><a href="#Gallery.html">Gallery</a></th></tr>
+	   <th class="assets"><a href="MOe.html">MOe</a></th>
+	   <th class="assets"><a href="Assets.html">Assets</a></th>
+	   <th class="assets"><a href="Goals.html">Goals</a></th>
+  	 <th class="assets"><a href="Gallery.html">Gallery</a></th></tr>
     </table></center>
   </nav>
       
-      <p>I am a young entrepreneur from Harlem, New York.</p>
     </article>
 
     <footer>MOetainment</footer>
@@ -76,7 +106,7 @@ article
     <center><h1 style="font-style: oblique; font-size:200px;">
     <em><span style="color:#ffd700;">MOe </span></em>
     <strong>Entertainment</strong><br>
-    <img src="https://media.licdn.com/mpr/mpr/shrinknp_200_200/p/8/005/05e/388/38c7baf.jpg">   </h1></center>
+    <img src="https://media.licdn.com/mpr/mpr/shrinknp_200_200/p/8/005/05e/388/38c7baf.jpg">  </h1></center>
 
     <article>
 	<h3>How far can your creativity take YOU ! </h3>
