--- a/Moetainment/mainmoe.html
+++ b/Moetainment/mainmoe.html
@@ -1,36 +1,36 @@
 <!DOCTYPE html>
-<html>
-<head>
-	<title>Goals</title> <meta charset="utf-8">
-  <title>MOe</title><link rel="stylesheet" type="text/css" href="style.css">
-  <style type="text/css">
-
-	h1{font-family:Georgia, serif ;font-weight:300px}
+<html lang="en">
+<head> 
+  <meta charset="utf-8"; name="viewport"; content="width=device-width, initial-scale=1;">
+              <link rel="stylesheet" href="/lib/w3.css">
+              <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+              <link rel="stylesheet" type="text/css" href="style.css">
+                          <title>MOe</title>
+      <style type="text/css">
+	h1{color: #f4c835; ,font-family:Georgia, serif ;font-weight:300px}
 	h1{text-shadow: 2px 4px 8px #C25975;}
   h2{font-family: "Arial Black", Gadget, sans-serif;}
   h3{font-family:"Times New Roman", Times, serif }
 	div.container {width: 100%; border: 2px solid gray;}
 
-  header, footer {
-    padding: 1em;
+  header 
+  {background: url("https://i.makeagif.com/media/3-01-2016/pKB5Jk.gif"); 
+}
+   footer { 
+     background: url("https://i.makeagif.com/media/3-01-2016/pKB5Jk.gif"); 
+     padding: 1em;
     color: white;
     background-color:#f599af;
     clear: left;
     text-align: center;
+   
    }
-body{
-    background-image: url("img_tree.gif"), url("img_flwr.gif");
-    background-color: #cccccc;
-} {
-	background-clip: 
-}
-{
+body {
     margin: 0; 
     padding: 0; 
     font-family:'Arial, serif'; 
   }
   nav {
-    background-color: #595959; 
     color: #DAA520;
     list-style-image: url( "https://i.makeagif.com/media/3-01-2016/pKB5Jk.gif");
     float: left;
@@ -61,9 +61,6 @@ article
 
   </style>
 </head>
-		<center><h1>Who is MOe</h1></center>
-<body></body>
-
-
-
+<body>
+</body>
 </html>
