--- a/MOetainment.html
+++ b/MOetainment.html
@@ -1,89 +1,69 @@
 <!DOCTYPE html>
 <html>
-<head> 
-  <title>MOe</title>
-	<style type="text/css">
-	h1{font-family:Georgia, serif ;font-weight:300px}
-	h1{text-shadow: 2px 4px 8px #C25975;}
-  h2{font-family: "Arial Black", Gadget, sans-serif;}
-  h3{font-family:"Times New Roman", Times, serif }
-	div.container {width: 100%; border: 2px solid gray;}
-
-  header, footer
- {
-    padding: 1em;
-    color: white;
-    background-color:#f599af;
-    clear: left;
-    text-align: center;
-   }
-
-  nav 
-  {
-    float: left;
-    max-width: 160px;
-    margin: 0;
-    padding: 1em;
+<head>
+<link href="/normalize.css" rel="stylesheet">
+<head>
+<style>
+ header {
+text-align: center;
+background: url("http://dash.ga.co/assets/jeff-bg.png");
+background-size: cover;
+color: white;
+}
+a {color: white;
+}
+h1{
+  font-size: 70px;
   }
-
-  nav ul 
-  {
-    list-style-type: none;
-    padding: 0;
-  }
-   
-nav ul a 
-  {
-    text-decoration: underline;
-  }
-
-article 
-    {margin-left: 170px;
-    border-left: 1px solid gray;
-    padding: 1em;
-    overflow: hidden;
+img {
+    margin: 40px 0px 0px 0px;
+    border: 7px solid white;
+    border-radius:20px; 
     }
-  .assets
-  {margin: 50px; font-family: Georgia,serif;}
-  </style>
+ul { 
+  padding:10px;
+  background: black;
+}
+
+li {
+display: inline;
+padding: 0px 10px 0px 10px;
+}
+
+    article {
+      max-width: 500px;
+      padding: 20px;
+      margin: 0 auto;
+    }
+      @media (max-width: 500px) {
+        body {
+background-color: rgba(192,92,12,0.3);
+          }
+          li {
+            display: block; 
+            padding: 5px;
+          }
+            h1{
+              font-size: 36px;
+    
+          }
+        }
+
+</style>
 </head>
-<body style="background-color:#FCDFE6" >
+<body>
+ <header 
+background: url ("https://i.stack.imgur.com/0mGud.png")>
+ <img src="https://media.chesskidfiles.com/images/user/tiny_mce/BoundingOwl/black-queen.png">
+<img src="https://s-media-cache-ak0.pinimg.com/564x/7e/3b/81/7e3b81a1c3c6fcdf6a993c9d2f886435.jpg ">
+<img src="https://media.chesskidfiles.com/images/user/tiny_mce/BoundingOwl/black-queen.png">
+<center><h1>MOetainment</h1></center>
 
-<div class="container" >
-
-<header>
-   <h1>Imagination</h1>
+<ul>
+<Li><a href="#">LinkedIn</a></li>
+<Li><a href="#">Instagram</a></li>
+<Li><a href="#">Youtube</a></li>
+</ul>
 </header>
-  
-<nav>
-   <center><table>
-	   <tr colspan="50">
-	   <th class="assets"><a href="#MOe.html">MOe</a></th>
-	   <th class="assets"><a href="#Assets.html">Assets</a></th>
-	   <th class="assets"><a href="#Goals.html">Goals</a></th>
-  	 <th class="assets"><a href="#Gallery.html">Gallery</a></th></tr>
-    </table></center>
-</nav>
-      <h1>Hustle statement</h1>
-      <p>I am a young entrepreneur from Harlem, New York.</p>
-    </article>
-
-    <footer>MOetainment</footer>
-
-</div></style>
-
-<div >
-    <center><h1 style="font-style: oblique; font-size:200px;">
-    <em><span style="color:#ffd700;">MOe </span></em>
-    <strong>Entertainment</strong><br>
-    <img src="https://media.licdn.com/mpr/mpr/shrinknp_200_200/p/8/005/05e/388/38c7baf.jpg">   </h1></center>
-
-    <article>
-	<h3>How far can your creativity take YOU ! </h3>
-</div>
-
-
-
-
 </body>
-</html>
+</html> 
