--- a/Moetainment/AssetsAd.html
+++ b/Moetainment/AssetsAd.html
@@ -62,25 +62,24 @@ h6{
   font-size:70px;
   text-shadow: 5px 5px 5px #CCAC00;
         }
-div.page-header {
+div.ad{
+  position: absolute;
+    right: 0;
     width: 200px;
-    height: 470px;
-    background:url("https://media.chesskidfiles.com/images/user/tiny_mce/BoundingOwl/black-queen.png");
-    position: relative;
-    -webkit-animation: mymove 18s infinite;
+    height: 100px;
+    background-color: coral;
+    color: white;
+    -webkit-animation: mymove 5s infinite; 
+    animation: mymove 5s infinite;
 }
-    @keyframes mymove {
-    0%   {top: 0px; left: 0px; background:url("https://media.chesskidfiles.com/images/user/tiny_mce/BoundingOwl/black-queen.png");}
-    25%  {top: 0px; left: 100px; background:url("https://media.chesskidfiles.com/images/user/tiny_mce/BoundingOwl/black-queen.png");}
-    50%  {top: 100px; left: 100px;background:url("https://media.chesskidfiles.com/images/user/tiny_mce/BoundingOwl/black-queen.png");}
-    75%  {top: 100px; left: 0px; background:url("https://media.chesskidfiles.com/images/user/tiny_mce/BoundingOwl/black-queen.png");}
-    100% {top: 0px; left: 0px;background:url("https://media.chesskidfiles.com/images/user/tiny_mce/BoundingOwl/black-queen.png");}
+@keyframes mymove {
+    50% {right: 500px;}
 }
   
 .container a {
     font-family: 'Rochester', cursive;
     font-size: 100px;
-    color: yellow;
+    color: #000000;
     text-align: center;
     padding:;
     text-decoration: none;
@@ -146,6 +145,9 @@ div.page-header {
   }
   
 div.jumbotron{}
+ div.banner{ background-image:url("http://i.giphy.com/aRZ4vTsHnyW6A.gif"); 
+width:;
+height:30px;}
 div.container-fluid{
   background-color: rgba(255,192,76,0.);
   }
@@ -157,15 +159,15 @@ div.mainbody{
   width: ;
   height: ;
   }
-div.middlebody{background-color: rgba(139,157,195.0.9);
+div.middlebody{background-color: rgba(139,157,195.0.2);
 }
 div.endbody{
   }
 div.footer{
    background-image:url("http://i.giphy.com/aRZ4vTsHnyW6A.gif"); 
    color: #f52887;
-  width:
-  height: 1200px;
+  width:;
+  height: 150px;
   }
 </style>
 </head>
@@ -185,7 +187,7 @@ div.footer{
     </div>
     
     
- <div class="dropdown" style="float:left;">
+  <div class="dropdown" style="float:left;">
        <h3><button class="dropbtn">Assets</button></h3>
       <div class="dropdown-content" style="left:0;" font-size:"12px">
           <p><a href="AssetsAd.html">Advocacy</a>
@@ -197,9 +199,9 @@ div.footer{
   <div class="dropdown" style="float:left;">
       <h3><button class="dropbtn">Contact</button></h3>
       <div class="dropdown-content" style="left:0;">
-      <p><a href="Contact-buscard.html">Business Card</a>
+      <p><a href="Con-buscard.html">Business Card</a>
        <a href="Con-Resume.html">Resume</a>
-       <a href="MOeSM.html">Social Media</a></p>
+       <a href="Con-SM.html">Social Media</a></p>
       </div></div>
 <!--seperate-->
 <!--DropGallery-->
@@ -221,10 +223,10 @@ div.footer{
 
   <!--EDIT-->
   <div class="mainbody"><center>
-      <div class="page-header"></div>
- </div>
+      <h1>Advocacy</h1></center></div>
+
   
-<div style="background-color: #cccccc;" class="middlebody">
+<div style="background-color: #a3ddff;" class="middlebody">
 
 <p>Some more text</p></div>
 
