--- a/Moetainment/Assetscomm.html
+++ b/Moetainment/Assetscomm.html
@@ -80,7 +80,7 @@ div.page-header {
 .container a {
     font-family: 'Rochester', cursive;
     font-size: 100px;
-    color: yellow;
+    color: #000000;
     text-align: center;
     padding:;
     text-decoration: none;
@@ -146,6 +146,9 @@ div.page-header {
   }
   
 div.jumbotron{}
+ div.banner{ background-image:url("http://i.giphy.com/aRZ4vTsHnyW6A.gif"); 
+width:;
+height:30px;}
 div.container-fluid{
   background-color: rgba(255,192,76,0.);
   }
@@ -164,8 +167,8 @@ div.endbody{
 div.footer{
    background-image:url("http://i.giphy.com/aRZ4vTsHnyW6A.gif"); 
    color: #f52887;
-  width:
-  height: 1200px;
+  width:;
+  height: 150px;
   }
 </style>
 </head>
@@ -178,14 +181,14 @@ div.footer{
 
     <center><img src="https://img.clipartfox.com/ac2253e6129d0fa220e38676fd0be4fa_chessboard-perspective-02-clipart-chess-board_2400-1200.png" alt="chessboard" width="800" height="200"></header>
      <!--DropASSETS-->
-    <nav class="navbar navbar-inverse"> 
+   <nav class="navbar navbar-inverse"> 
     <div class="container-fluid">
     <div class="navbar-header">
     <ul class="nav navbar-nav">
     </div>
     
     
-<div class="dropdown" style="float:left;">
+  <div class="dropdown" style="float:left;">
        <h3><button class="dropbtn">Assets</button></h3>
       <div class="dropdown-content" style="left:0;" font-size:"12px">
           <p><a href="AssetsAd.html">Advocacy</a>
@@ -197,9 +200,9 @@ div.footer{
   <div class="dropdown" style="float:left;">
       <h3><button class="dropbtn">Contact</button></h3>
       <div class="dropdown-content" style="left:0;">
-      <p><a href="Contact-buscard.html">Business Card</a>
+      <p><a href="Con-buscard.html">Business Card</a>
        <a href="Con-Resume.html">Resume</a>
-       <a href="MOeSM.html">Social Media</a></p>
+       <a href="Con-SM.html">Social Media</a></p>
       </div></div>
 <!--seperate-->
 <!--DropGallery-->
@@ -220,11 +223,11 @@ div.footer{
 
 
   <!--EDIT-->
-  <div class="mainbody"><center>
+  <div class="mainbody"><center><h1>Community</h1></center><div class="banner"></div>
       <div class="page-header"></div>
  </div>
   
-<div style="background-color: #cccccc;" class="middlebody">
+<div style="background-color: #a3ddff;" class="middlebody">
 
 <p>Some more text</p></div>
 
