--- a/Moetainment/Con-Resume.html
+++ b/Moetainment/Con-Resume.html
@@ -80,7 +80,7 @@ div.page-header {
 .container a {
     font-family: 'Rochester', cursive;
     font-size: 100px;
-    color: yellow;
+    color: #000000;
     text-align: center;
     padding:;
     text-decoration: none;
@@ -146,6 +146,9 @@ div.page-header {
   }
   
 div.jumbotron{}
+ div.banner{ background-image:url("http://i.giphy.com/aRZ4vTsHnyW6A.gif"); 
+width:;
+height:30px;}
 div.container-fluid{
   background-color: rgba(255,192,76,0.);
   }
@@ -157,7 +160,7 @@ div.mainbody{
   width: ;
   height: ;
   }
-div.middlebody{background-color: rgba(139,157,195.0.9);
+div.middlebody{background-color:rgba(255,128,164,0.6);
 }
 div.endbody{
   }
@@ -178,7 +181,7 @@ div.footer{
 
     <center><img src="https://img.clipartfox.com/ac2253e6129d0fa220e38676fd0be4fa_chessboard-perspective-02-clipart-chess-board_2400-1200.png" alt="chessboard" width="800" height="200"></header>
      <!--DropASSETS-->
-    <nav class="navbar navbar-inverse"> 
+   <nav class="navbar navbar-inverse"> 
     <div class="container-fluid">
     <div class="navbar-header">
     <ul class="nav navbar-nav">
@@ -188,7 +191,7 @@ div.footer{
   <div class="dropdown" style="float:left;">
        <h3><button class="dropbtn">Assets</button></h3>
       <div class="dropdown-content" style="left:0;" font-size:"12px">
-          <p><a href="Assetsad.html">Advocacy</a>
+          <p><a href="AssetsAd.html">Advocacy</a>
           <a href="Assetscomm.html">Community</a>
           <a href="Assetshobb.html">Hobbies</a></p>
           </div></div>
@@ -197,33 +200,33 @@ div.footer{
   <div class="dropdown" style="float:left;">
       <h3><button class="dropbtn">Contact</button></h3>
       <div class="dropdown-content" style="left:0;">
-      <p><a href="Contact-buscard.html">Business Card</a>
+      <p><a href="Con-buscard.html">Business Card</a>
        <a href="Con-Resume.html">Resume</a>
-       <a href="MOeSM.html">Social Media</a></p>
+       <a href="Con-SM.html">Social Media</a></p>
       </div></div>
 <!--seperate-->
 <!--DropGallery-->
 <div class="dropdown" style="float:right;">
   <h3><button class="dropbtn">Gallery</button></h3>
   <div class="dropdown-content">
-    <p><a href="#">How To</a>
-    <a href="#">Tech Tips</a>
-    <a href="#">Portfolio</a></p>
+    <p><a href="HowTo.html">How To</a>
+    <a href="TechTips.html">Tech Tips</a>
+    <a href="Portfolio.html">Portfolio</a></p>
   </div></div>
 <!--DropFAQ-->
 <div class="dropdown" style="float:right;">
     <h3><button class="dropbtn">FAQ</button></h3>
     <div class="dropdown-content">
-      <p><a href="#">Problems</a></p>
+      <p><a href="Problems.html">Problems</a></p>
 </div></div></ul>
  </nav></center>
 
   <!--EDIT-->
-  <div class="mainbody"><center>
+  <div class="mainbody"><center><h1>Resume</h1></center>
       <div class="page-header"></div>
  </div>
   
-<div style="background-color: #cccccc;" class="middlebody">
+<div class="middlebody">
 
 <p>Some more text</p></div>
 
