--- a/Moetainment/Con-SM.html
+++ b/Moetainment/Con-SM.html
@@ -61,7 +61,52 @@ h6{
   font-family: 'Raleway', sans-serif;
   font-size:70px;
   text-shadow: 5px 5px 5px #CCAC00;
-        }
+        }.fa{
+  padding: 50px;
+  font-size: 30px;
+  width: 50px;
+  text-align:center;
+  text-decoration: none;
+  margin: 5px 2px;
+  border-radius: 100%;
+   }       
+.fa:hover{
+  opacity: 0.3;
+  }        
+.fa-facebook{
+  background: #3B5998;
+  color: white;
+  }  
+.fa-twitter {
+  background: #55ACEE;
+  color: white;
+}
+
+.fa-google {
+  background: #dd4b39;
+  color: white;
+}
+
+.fa-linkedin {
+  background: #007bb5;
+  color: white;
+}
+
+.fa-youtube {
+  background: #bb0000;
+  color: white;
+}
+
+.fa-instagram {
+  background:#be29ec;
+  color: white;
+}
+.fa-snapchat-ghost {
+  background: #fffc00;
+  color: white;
+  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+}
+
 div.page-header {
     width: 200px;
     height: 470px;
@@ -80,7 +125,7 @@ div.page-header {
 .container a {
     font-family: 'Rochester', cursive;
     font-size: 100px;
-    color: yellow;
+    color: #000000;
     text-align: center;
     padding:;
     text-decoration: none;
@@ -146,6 +191,9 @@ div.page-header {
   }
   
 div.jumbotron{}
+ div.banner{ background-image:url("http://i.giphy.com/aRZ4vTsHnyW6A.gif"); 
+width:;
+height:30px;}
 div.container-fluid{
   background-color: rgba(255,192,76,0.);
   }
@@ -157,15 +205,15 @@ div.mainbody{
   width: ;
   height: ;
   }
-div.middlebody{background-color: rgba(139,157,195.0.9);
+div.middlebody{background-color:rgba(255,128,164,0.6);
 }
 div.endbody{
   }
 div.footer{
    background-image:url("http://i.giphy.com/aRZ4vTsHnyW6A.gif"); 
    color: #f52887;
-  width:
-  height: 1200px;
+  width:;
+  height: 150px;
   }
 </style>
 </head>
@@ -173,7 +221,7 @@ div.footer{
 <body>
 <header>
     <div class="container"> 
- <center><div><h1><a href="landingpage.html">MOe</a></h1></div>
+     <center><div><h1><a href="MainNav.html">MOe</a></h1></div>
  <img src="https://scontent-lga3-1.xx.fbcdn.net/v/t1.0-9/17203036_1422469097811436_5040247974084912238_n.jpg?oh=90ee20ed53d51304a9a44acfe70fa365&oe=596669F6" width="" height="200"></div></center>
 
     <center><img src="https://img.clipartfox.com/ac2253e6129d0fa220e38676fd0be4fa_chessboard-perspective-02-clipart-chess-board_2400-1200.png" alt="chessboard" width="800" height="200"></header>
@@ -188,7 +236,7 @@ div.footer{
   <div class="dropdown" style="float:left;">
        <h3><button class="dropbtn">Assets</button></h3>
       <div class="dropdown-content" style="left:0;" font-size:"12px">
-          <p><a href="Assetsad.html">Advocacy</a>
+          <p><a href="AssetsAd.html">Advocacy</a>
           <a href="Assetscomm.html">Community</a>
           <a href="Assetshobb.html">Hobbies</a></p>
           </div></div>
@@ -197,39 +245,47 @@ div.footer{
   <div class="dropdown" style="float:left;">
       <h3><button class="dropbtn">Contact</button></h3>
       <div class="dropdown-content" style="left:0;">
-      <p><a href="Contact-buscard.html">Business Card</a>
+      <p><a href="Con-buscard.html">Business Card</a>
        <a href="Con-Resume.html">Resume</a>
-       <a href="MOeSM.html">Social Media</a></p>
+       <a href="Con-SM.html">Social Media</a></p>
       </div></div>
 <!--seperate-->
 <!--DropGallery-->
 <div class="dropdown" style="float:right;">
   <h3><button class="dropbtn">Gallery</button></h3>
   <div class="dropdown-content">
-    <p><a href="#">How To</a>
-    <a href="#">Tech Tips</a>
-    <a href="#">Portfolio</a></p>
+    <p><a href="HowTo.html">How To</a>
+    <a href="TechTips.html">Tech Tips</a>
+    <a href="Portfolio.html">Portfolio</a></p>
   </div></div>
 <!--DropFAQ-->
 <div class="dropdown" style="float:right;">
     <h3><button class="dropbtn">FAQ</button></h3>
     <div class="dropdown-content">
-      <p><a href="#">Problems</a></p>
+      <p><a href="Problems.html">Problems</a></p>
 </div></div></ul>
  </nav></center>
 
   <!--EDIT-->
-  <div class="mainbody"><center>
-      <div class="page-header"></div>
+  <div><center><h1>Social Media</h1>
+    <a href="#" class="btn btn-info btn-lg"> <h3>Follow Me</h3>
+           <span class="glyphicon">&#xe008;</span></a><div class="banner"></div></center>
+     
  </div>
-  
-<div style="background-color: #cccccc;" class="middlebody">
+  <h1></h1>
 
-<p>Some more text</p></div>
 
-<h2></h2>
+<div class="middlebody"><a href="https://www.linkedin.com/in/successfulentrepreneur13/" class="fa fa-linkedin"></a><h4>Mouminatou Barry</h4></div>
 
-<!--FOOTER--><center><span class="glyphicon">&#xe212;</span><br /><p>Mind of a Hustler, <br /> Presence of an Entrepreneur.</p> <img src="https://media.licdn.com/mpr/mpr/shrinknp_200_200/p/8/005/05e/388/38c7baf.jpg"> </center>
+<div  style="background-color: #f7f7f7;" align="right"><a href="https://www.facebook.com/monaa.dehh.donn" class="fa fa-facebook"></a><h4>MOe MOe</h4></div>
+<div class="middlebody"><a href="https://www.instagram.com/_lady.aura_/?hl=en" class="fa fa-instagram"></a><h4>_Lady.Aura_</h4></div>
+<div  style="background-color: #f7f7f7;"  align="right"><a href="#" class="fa fa-snapchat-ghost"></a><h4>Lady_Aura</h4></div>
+<div class="middlebody"><a href="https://mail.google.com/mail/u/0/#inbox" class="fa fa-google"></a><a href="https://www.youtube.com/channel/UCdXakklq85rCLAmOo08Xstw" class="fa fa-youtube"></a><h4>MOetainment13@gmail.com</h4></div>
+
+<div  style="background-color: #f7f7f7;" align="right"><a href="#" class="fa fa-twitter"></a></div>
+
+<center><span class="glyphicon">&#xe212;</span><br /><p>Mind of a Hustler, <br /> Presence of an Entrepreneur.</p> <img src="https://media.licdn.com/mpr/mpr/shrinknp_200_200/p/8/005/05e/388/38c7baf.jpg"> </center>
+<!--FOOTER-->
 <div class="footer">  
  <center><h3>How far can your creativity take YOU ! </h3></center><i class="w3-jumbo w3-spin fa fa-home"></i></div>
  <!--END-->
