--- a/Moetainment/MainNav.html
+++ b/Moetainment/MainNav.html
@@ -80,7 +80,7 @@ div.page-header {
 .container a {
     font-family: 'Rochester', cursive;
     font-size: 100px;
-    color: yellow;
+    color: #000000;
     text-align: center;
     padding:;
     text-decoration: none;
@@ -145,7 +145,10 @@ div.page-header {
     padding: 50px;
   }
   
-div.jumbotron{}
+ div.banner{ background-image:url("http://i.giphy.com/aRZ4vTsHnyW6A.gif"); 
+width:;
+height:30px;}
+
 div.container-fluid{
   background-color: rgba(255,192,76,0.);
   }
@@ -164,8 +167,8 @@ div.endbody{
 div.footer{
    background-image:url("http://i.giphy.com/aRZ4vTsHnyW6A.gif"); 
    color: #f52887;
-  width:
-  height: 1200px;
+  width:;
+  height: 150px;
   }
 </style>
 </head>
@@ -197,9 +200,9 @@ div.footer{
   <div class="dropdown" style="float:left;">
       <h3><button class="dropbtn">Contact</button></h3>
       <div class="dropdown-content" style="left:0;">
-      <p><a href="Contact-buscard.html">Business Card</a>
+      <p><a href="Con-buscard.html">Business Card</a>
        <a href="Con-Resume.html">Resume</a>
-       <a href="MOeSM.html">Social Media</a></p>
+       <a href="Con-SM.html">Social Media</a></p>
       </div></div>
 <!--seperate-->
 <!--DropGallery-->
@@ -223,7 +226,7 @@ div.footer{
       <div class="page-header"></div>
  </div>
   
-<div style="background-color: #cccccc;" class="middlebody">
+<div class="middlebody">
 
 <p>Some more text</p></div>
 
