--- a/Moetainment/HowTo.html
+++ b/Moetainment/HowTo.html
@@ -80,7 +80,7 @@ div.page-header {
 .container a {
     font-family: 'Rochester', cursive;
     font-size: 100px;
-    color: yellow;
+    color: #000000;
     text-align: center;
     padding:;
     text-decoration: none;
@@ -146,6 +146,9 @@ div.page-header {
   }
   
 div.jumbotron{}
+ div.banner{ background-image:url("http://i.giphy.com/aRZ4vTsHnyW6A.gif"); 
+width:;
+height:30px;}
 div.container-fluid{
   background-color: rgba(255,192,76,0.);
   }
@@ -157,7 +160,7 @@ div.mainbody{
   width: ;
   height: ;
   }
-div.middlebody{background-color: rgba(139,157,195.0.9);
+div.middlebody{background-color:rgba(255,128,164,0.6);
 }
 div.endbody{
   }
@@ -178,13 +181,13 @@ div.footer{
 
     <center><img src="https://img.clipartfox.com/ac2253e6129d0fa220e38676fd0be4fa_chessboard-perspective-02-clipart-chess-board_2400-1200.png" alt="chessboard" width="800" height="200"></header>
      <!--DropASSETS-->
-    <nav class="navbar navbar-inverse"> 
+   <nav class="navbar navbar-inverse"> 
     <div class="container-fluid">
     <div class="navbar-header">
     <ul class="nav navbar-nav">
     </div>
     
-<div class="dropdown" style="float:left;">
+  <div class="dropdown" style="float:left;">
        <h3><button class="dropbtn">Assets</button></h3>
       <div class="dropdown-content" style="left:0;" font-size:"12px">
           <p><a href="AssetsAd.html">Advocacy</a>
@@ -196,9 +199,9 @@ div.footer{
   <div class="dropdown" style="float:left;">
       <h3><button class="dropbtn">Contact</button></h3>
       <div class="dropdown-content" style="left:0;">
-      <p><a href="Contact-buscard.html">Business Card</a>
+      <p><a href="Con-buscard.html">Business Card</a>
        <a href="Con-Resume.html">Resume</a>
-       <a href="MOeSM.html">Social Media</a></p>
+       <a href="Con-SM.html">Social Media</a></p>
       </div></div>
 <!--seperate-->
 <!--DropGallery-->
@@ -218,11 +221,11 @@ div.footer{
  </nav></center>
 
   <!--EDIT-->
-  <div class="mainbody"><center>
-      <div class="page-header"></div>
+  <div class="mainbody"><center><h1>How To's</h1>
+      <div class="banner"></div>
  </div>
   
-<div style="background-color: #cccccc;" class="middlebody">
+<div class="middlebody">
 
 <p>Some more text</p></div>
 
